--- a/.github/workflows/eden_packet_arm.yml
+++ b/.github/workflows/eden_packet_arm.yml
@@ -1,7 +1,7 @@
 ---
 name: EdenPacketARM
 on:  # yamllint disable-line rule:truthy
-  push:
+  pull_request:
     branches: [master]
 # yamllint disable rule:line-length
 jobs:
@@ -24,6 +24,7 @@ jobs:
       - name: Create ubuntu on packet hosting
         id: ubuntu
         run: |
+          echo "$PACKET_PROJECT"
           packet_ubuntu_id=$(./shell-scripts/packet/create.sh ${{ matrix.conf_eden_server }} -p "$PACKET_PROJECT" -ns gh-action -os ubuntu_18_04)
           packet_ubuntu_ip=$(./shell-scripts/packet/wait-eth0.sh $packet_ubuntu_id 100)
           echo "Packet server ID: ${packet_ubuntu_id}"
